@@ -15,6 +15,17 @@
 # generates a copy of all vob files from a dvd            #
 ###########################################################
 
+if [ "$UID" == 0 ] ; then
+   clear
+   echo This script should not be executed as user root !
+   echo You have to remove this lines to run this script as user 
+   echo root, what is by the way not recommanded !!
+   echo
+   echo ----------------------- script rc=254 ---------------------------
+   echo -----------------------------------------------------------------
+   exit 254
+fi
+
 SCRIPTDIR="$HOME/.xbmc/addons/script.video.swiss.army.knife/shell-linux"
 
 SHELLTEST="/bin/bash"
@@ -24,6 +35,8 @@ if [ $SHELL != $SHELLTEST ] ; then
    echo only bash shell is supported by this shell-script.
    echo It looks like you are using something other than /bin/bash.
    echo
+   echo ----------------------- script rc=255 ---------------------------
+   echo -----------------------------------------------------------------
    exit 255
 fi
 
